Revision history for Perl extension App::perlbuild

0.20 2013-05-17T00:46:48Z

    - use 'test_harness' for parallel testing.
      (tokuhirom)
    - Added --tarball-dir option
      (tokuhirom)

0.19 2013-05-16T02:17:08Z

    - no feature changes

0.18 2013-05-16T01:51:30Z

    - Support --jobs for parallel building.
      (tokuhirom)
    - Install from url
      (tokuhirom)

0.17 2013-04-05T08:36:20Z

    - Perl::Build::Built::new should take HashRef
      Broken at 0.16.
      (syohex)

0.16 2013-04-04T04:08:37Z

    - Add a Built package and integrate it into Build.pm
      (Kent Fredric)

0.15 2013-04-01T01:55:25Z

    - Grammar fix and Typo fixes.
      (Mark Stosberg)

0.14 2013-03-31T07:23:51Z

    - Documentation enhancements suggested by markstos
      (tokuhirom)

0.13 2013-03-29T23:46:30Z

    - add to support build-dir command-line option
      (typester)

0.12 2013-03-28T07:52:13Z

    - packaging, again.
      Back to Module::Build from Module::Build::Tiny.

0.11 2013-03-28T02:45:03Z

    - re-packaging

0.10 2013-03-27T12:08:57Z

    - Perl5 installs public executable scripts(like `prove`) to /usr/local/share/
      if it exists.
      This -A'eval:scriptdir=$prefix/bin' option avoid this feature.
      (Reported by moznion++)

0.09 2013-03-27T05:13:03Z

    - Remove 'patchperl' option in OO APIs.
      Use Devel::PatchPerl as a library.
      (tokuhirom)

0.08 2013-03-22T20:32:06

    - minil-ized
      (tokuhirom)

0.06 2013-03-10T10:37:42

    - Depend to latest Devel::PatchPerl
      It removes dependency for IPC::Cmd.
      (tokuhirom)

0.05 2013-02-01T15:00:50

    commit 1d9912144703e31079ac71f56e0616af4bddee77
    Author: Syohei YOSHIDA <syohex@gmail.com>
    Date:   Wed Jan 30 13:58:05 2013 +0900

    Fixed for parsing command line arguments

      - Loop for @D, @A, @U makes no sense
      - Remove '--' if @ARGV contains it(See also Getopt::Long document).

0.04 2013-01-24T12:19:57

    - switch to HTTP::Tiny
      (tokuhirom)

0.03
