@@ -4,7 +4,7 @@ use warnings;
 use utf8;
 
 use 5.008002;
-our $VERSION = '0.20';
+our $VERSION = 'y';
 
 use Carp ();
 use File::Basename;
