@@ -18,10 +18,12 @@ Getopt::Long::Configure(
     'bundling',
 );
 GetOptions(
+    'h|help' => \my $help,
     'test!' => \$test,
     'D=s@'  => \@D,
     'A=s@'  => \@A,
     'U=s@'  => \@U,
+    'definitions' => \my $definitions,
     'patches=s' => \$patches,
     'build-dir=s' => \$build_dir,
     'j|jobs=i' => \my $jobs,
@@ -29,6 +31,15 @@ GetOptions(
 );
 for (@D, @A, @U) {
     s/^=//;
+}
+
+pod2usage(1) if $help;
+
+if ($definitions) {
+    for (Perl::Build->available_perls()) {
+        print "$_\n";
+    }
+    exit 0;
 }
 
 shift @ARGV if @ARGV >= 1 && $ARGV[0] eq '--';
@@ -134,6 +145,12 @@ Parallel building and testing.
 Specify the tar ball saving directory.
 
 (Default: temporary directory, will remove after building)
+
+=item --definitions
+
+    % perl-build --definitions
+
+Display the available perl versions and exit.
 
 =back
 
