@@ -1,5 +1,10 @@
 Revision history for Perl extension App::perlbuild
 
+0 2013-05-28T14:32:39Z
+
+    - Added `--definitions` option. This option is same as ruby-build.
+      (tokuhirom)
+
 0.20 2013-05-17T00:46:48Z
 
     - use 'test_harness' for parallel testing.
